--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_tasks">Task list</string>
+    <string name="title_projects">Project list</string>
+    <string name="title_settings">Settings</string>
 </resources>
