--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="title_notifications">Notifications</string>
     <string name="title_tasks">Task list</string>
     <string name="title_projects">Project list</string>
-    <string name="title_settings">Settings</string>
+    <string name="title_credit">About</string>
 </resources>
